--- a/sigmaCabs/app/views/dispatches/vehicleBookingClose.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingClose.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Actual Drop Place</label>
-                    <span>{{vehicleDetails.vehicleMainDetials.details.dropPlace}}</span>
+                    <span class="ellipsisText" title="{{vehicleDetails.vehicleMainDetials.details.dropPlace}}">{{vehicleDetails.vehicleMainDetials.details.dropPlace}}</span>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Drop Place</label>
