--- a/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
@@ -3,11 +3,11 @@
 
     <div class="fieldContainer relative left">
         <label class="labelCompact">Vehicle Name</label>
-        <span>{{vehicleDetails.vehicleName}}</span>
+        <span>{{vehicleDetails.vName}}</span>
     </div>
     <div class="fieldContainer relative right" style="width:180px;">
         <label class="labelCompact">Vehicle Type</label>
-        <span>{{vehicleDetails.vehicleType}}</span>
+        <span>{{vehicleDetails.vType}}</span>
     </div>
     <p class="clear" />
     <div class="fieldContainer relative left">
