--- a/sigmaCabs/app/views/dispatches/vehicleBreakStop.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBreakStop.html
@@ -19,7 +19,7 @@
                 <legend class="searchbox-border">Vehicle Break Stop</legend>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Current Location</label>
-                     <input type="text" ng-model="vehicleDetails.vehicleMainDetials.location" maxlength="15" class="textFieldCompact" />
+                    <span>{{vehicleDetails.vehicleMainDetials.location}}</span>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">New Location</label>
