--- a/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
@@ -27,6 +27,15 @@
         <label class="labelCompact">Day Collection</label>
         <span>{{vehicleMainDetials.details.dayCollection}}</span>
     </div>
+    <div class="fieldContainer relative left" style="width:180px;">
+        <label class="labelCompact">Home Loc.</label>
+        <span>{{vehicleMainDetials.details.loginLocation}}</span>
+    </div>
+    <div class="fieldContainer relative right" style="width:180px;">
+        <label class="labelCompact">Next Booking</label>
+        <!-- {{vehicleMainDetials.details.nextBooking}} -->
+        <span>Yes</span> <!-- Yes / No  Green / Red color -->
+    </div>
     <p class="clear" />
     <div class="fieldContainer relative left" style="width:180px;">
         <label class="labelCompact">Current Loc</label>
