--- a/sigmaCabs/app/views/vehicles/basicDetailsTab.html
+++ b/sigmaCabs/app/views/vehicles/basicDetailsTab.html
@@ -21,7 +21,7 @@
     </div>
     <div class="fieldContainer relative left">
         <label class="control-label">Vehicle ID</label>
-        <input type="text" ng-model="vehicle.vehicleCode" class="form-control validate[required,maxSize[128]] large" placeholder="Vehicle Code" />
+        <input type="text" ng-model="vehicle.vehicleCode" class="form-control validate[required,maxSize[128]] large" placeholder="Vehicle Id" />
     </div>
     <div class="fieldContainer relative left">
         <label class="control-label">Registration #</label>
