--- a/sigmaCabs/app/views/dispatch.html
+++ b/sigmaCabs/app/views/dispatch.html
@@ -70,7 +70,7 @@
 	            <!-- <input type="text" ng-model="customer.customerDetails.callTime" class="left validate[required,maxSize[128]] textFieldCompact"  /> -->
 	        </div>
 	        <div class="fieldContainer left marginRightLeft5 bookingInput">
-	            <label class="labelCompact">Vehicle Code</label>
+	            <label class="labelCompact">Vehicle Id</label>
 	            <span class = "bokingLabel">{{vehicleMainDetials.vehicleCode}}</span>
 	            <!-- <input type="text" ng-model="customer.customerDetails.customerID" class="left validate[required,maxSize[128]] textFieldCompact"  /> -->
 	        </div>
