--- a/sigmaCabs/app/views/dispatches/dispatcherMainView.html
+++ b/sigmaCabs/app/views/dispatches/dispatcherMainView.html
@@ -1,9 +1,10 @@
 <div >
 	<div id="topContainerID">
 	    <div data-ng-include="vehicleInformationForm" class="left"></div>
-	    <div data-ng-include="vehicleLoginForm" data-ng-show="vLoginView" class="left"></div>
+	    <div data-ng-include="vehicleLoginForm" class="left" data-ng-show="vLoginView"></div>
 	    <div data-ng-include="vehicleVacantForm" class="left" data-ng-show="vVacantView"></div>
 	    <div data-ng-include="vehicleAllotForm" class="left" data-ng-show="vAllotView"></div>
+	    <div data-ng-include="vehicleDefaultForm" class="left" data-ng-show="vDefaultView"></div>
 	    <div data-ng-include="chatForm" class="left"></div>
 	    <div data-ng-include="bookingStatistics" class="left"></div>
 	    <p class="clear"/>
