--- a/sigmaCabs/app/views/dispatches/vehicleBookingClose.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingClose.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="fieldContainer  relative">
                     <label class="labelCompact">Actual Package</label>
-                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="bookingClose.tariffActual" data-ng-options="obj.id as obj.text for obj in vehiclePackageTypes"></select>
+                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="bookingClose.tariffActual" data-ng-options="obj.id as obj.text for obj in vehiclePackageTypes" disabled></select>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Total Amount</label>
