--- a/sigmaCabs/app/views/dispatches/vehicleBookingStart.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingStart.html
@@ -32,8 +32,8 @@
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Next Booking</label>
                     <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="bookingStart.nextBooking">
-                        <option>Yes</option>
-                        <option>No</option>
+                        <option value="1">Yes</option>
+                        <option value="2">No</option>
                     </select>
                 </div>
                 <div class="fieldContainer relative">
