--- a/sigmaCabs/app/views/booking.html
+++ b/sigmaCabs/app/views/booking.html
@@ -54,7 +54,7 @@
 		</div>
 		<div class="soft-msg" data-ng-include="viewLoader"></div>
 	    <div class="dashboard-search">
-	        <div class="existing-customer-booking pull-left" data-ng-include="existingCustomerAddBooking" data-ng-show="showExistingCustomerAddBooking"></div>
+	        <div class="existing-customer-booking" data-ng-include="existingCustomerAddBooking" data-ng-show="showExistingCustomerAddBooking"></div>
 
 	        <p class="clear" />
 	    </div>
