--- a/sigmaCabs/app/views/dispatch.html
+++ b/sigmaCabs/app/views/dispatch.html
@@ -103,7 +103,7 @@
 		</div>
 		<div class="soft-msg" data-ng-include="viewLoader"></div>
 	    <div class="dashboard-search">
-	        <div class="existing-customer-booking pull-left" data-ng-include="dispatcherMainView" ></div>
+	        <div class="existing-customer-booking" data-ng-include="dispatcherMainView" ></div>
 	        <p class="clear" />
 	    </div>
     </div>
