--- a/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
@@ -1,4 +1,4 @@
-<fieldset class="bookingFormController left" data-ng-controller="vehicleActivityController" style="margin-left: 7px;height:212px;">
+<fieldset class="dispatchFormController left" data-ng-controller="vehicleActivityController" style="margin-left: 7px;height:212px;">
     <legend class="searchbox-border">Vehicle Vacant {{vStateHeading}}</legend>
 
     <div class="fieldContainer relative left" style="width:180px;">
@@ -29,12 +29,11 @@
     </div>
     <div class="fieldContainer relative left" style="width:180px;">
         <label class="labelCompact">Home Loc.</label>
-        <span>{{vehicleMainDetials.details.loginLocation}}</span>
+        <span>{{vehicleMainDetials.details.homeLocation}}</span>
     </div>
     <div class="fieldContainer relative right" style="width:180px;">
         <label class="labelCompact">Next Booking</label>
-        <!-- {{vehicleMainDetials.details.nextBooking}} -->
-        <span>Yes</span> <!-- Yes / No  Green / Red color -->
+        <span>{{vNextBookingState}}</span> <!-- Yes / No  Green / Red color -->
     </div>
     <p class="clear" />
     <div class="fieldContainer relative left" style="width:180px;">
@@ -49,7 +48,7 @@
     <hr class="buttonSpliter" />
     <div class="mainButtonContainer">
         <div ng-switch on="vehicleMainDetials.vehicleState">
-            <button class="btnCompact btn-success" ng-switch-when="2" data-ng-click="fnVehicleConfirm()">Accepted</button>
+            <button class="btnCompact btn-success" ng-switch-when="2" data-ng-click="fnVehicleAccepBooking()">Accepted</button>
             <button class="btnCompact btn-danger" ng-switch-when="2" data-ng-click="fnVehicleRejectBooking()">Rejected</button>
         </div>
         <!-- <div>
